Fix gap that sometimes appears between intro section and border image
Even though the border-image-outset was set to the height of the image, there was still a gap in some cases. Slightly reducing the border-image-outset seems to fix the issue.

Issue #4

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -209,7 +209,7 @@ section.intro {
   border-image-width: 30px !important;
   border-image-slice: 0 0 100% 0;
   border-image-repeat: repeat;
-  border-image-outset: 30px;
+  border-image-outset: 29.5px;
 
   article {
     margin-left: calc(#{$max-content-width - $intro-width});
